Fix spacing around tags

--- a/static/src/scss/_content.scss
+++ b/static/src/scss/_content.scss
@@ -33,8 +33,8 @@ section.content {
     &.page-tags {
       font-family: $family-code;
 
-      .tag:not(:first-child) {
-        padding-right: 0;
+      .tag:not(:first-child) + .tag {
+        padding-left: 0;
       }
     }
   }
